--- a/index.html
+++ b/index.html
@@ -377,6 +377,17 @@
               </li>
             </ul>
           </div>
+          <div class="footer-third">
+            <p class="footer-form">Підпишіться на розсилку</p>
+            <form>
+              <div class="footer-subscription"> 
+              <input type="email" class="footer-input" placeholder="E-mail" required>
+              <button type="submit" class="footer-btn">Підписатися
+              <svg class="footer-btn-icon" width="24" height="24">
+                <use href="./images/symbol.svg#icon-icon-send"></use>
+              </svg></button></div>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
