--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
           <li class="header-contacs-item">
             <a class="header-contacs-mail link" href="mailto:info@devstudio.com"
               ><svg class="header-icon" width="16" height="12">
-                <use href="./images/symbol.svg#icon-envelope"></use></svg>info@devstudio.com</a
+                <use href="./images/symbol.svg#icon-envelope"></use></svg              >info@devstudio.com</a
             >
           </li>
           <li>
             <a class="header-contacs-tel link" href="tel:+380961111111"
               ><svg class="header-icon" width="10" height="16">
-                <use href="./images/symbol.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a
+                <use href="./images/symbol.svg#icon-smartphone"></use></svg              >+38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -150,12 +150,12 @@
                       <svg class="team-icon" width="20" height="20">
                         <use
                           href="./images/symbol.svg#icon-instagram"
-                        ></use></svg></a>
+                        ></use></svg                    ></a>
                   </li>
                   <li class="team-soc-item">
                     <a class="team-soc-link" href="">
                       <svg class="team-icon" width="20" height="20">
-                        <use href="./images/symbol.svg#icon-twitter"></use></svg></a>
+                        <use href="./images/symbol.svg#icon-twitter"></use></svg                    ></a>
                   </li>
                   <li class="team-soc-item">
                     <a class="team-soc-link" href="">
@@ -380,24 +380,72 @@
           <div class="footer-third">
             <p class="footer-form">Підпишіться на розсилку</p>
             <form>
-              <div class="footer-subscription"> 
-              <input type="email" class="footer-input" placeholder="E-mail" required>
-              <button type="submit" class="footer-btn">Підписатися
-              <svg class="footer-btn-icon" width="24" height="24">
-                <use href="./images/symbol.svg#icon-icon-send"></use>
-              </svg></button></div>
+              <div class="footer-subscription">
+                <input
+                  type="email"
+                  class="footer-input"
+                  placeholder="E-mail"
+                  required
+                />
+                <button type="submit" class="footer-btn">
+                  Підписатися
+                  <svg class="footer-btn-icon" width="24" height="24">
+                    <use href="./images/symbol.svg#icon-icon-send"></use>
+                  </svg>
+                </button>
+              </div>
             </form>
           </div>
         </div>
       </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop" data-modal>
       <div class="modal">
         <button type="button" class="modal-btn" data-modal-close>
           <svg class="modal-close-icon" width="18" height="18">
             <use href="./images/symbol.svg#icon-close"></use>
           </svg>
         </button>
+        <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
+        <form>
+          <div class="modal-field">
+          <label for="user-text" class="modal-label-text">Ім'я</label>
+          <input
+            type="text"
+            class="modal-input"
+            name="user-text"
+            id="user-text"
+            required
+          />
+        </div>
+          <div class="modal-field">
+          <label for="user-tel" class="modal-label-text">Телефон</label>
+          <input
+            type="tel"
+            class="modal-input"
+            name="user-tel"
+            id="user-tel"
+            required
+          />
+        </div>
+        <div class="modal-field">
+          <label for="user-email" class="modal-label-text">Пошта</label>
+          <input
+            type="email"
+            class="modal-input"
+            name="user-email"
+            id="user-email"
+            required
+          />
+        </div>
+        <div class="modal-field">
+          <label for="user-text" class="modal-label-text">Коментар</label>
+          <textarea name="user-text" id="user-text" class="modal-comment" placeholder="Введіть текст"></textarea>
+        </div>
+        <input type="checkbox" name="mailing-list" id="mailing-list">
+        <label for="mailing-list" class="modal-label-btn">Погоджуюся з розсилкою та приймаю Умови договору</label>
+          <button type="submit" class="modal-btn-second">Відправити</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
